--- a/views/admin.html
+++ b/views/admin.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>管理员界面</h1>
+    <img src="/images/p1.png" alt="" width="220px">
     <form action="/admin" method="POST">
         <table>
             <tr>
