--- a/views/student.html
+++ b/views/student.html
@@ -50,22 +50,22 @@
                     <%=be_class%>
                 </td>
                 <td>
-                    -
+                    <%=Chinese%>
                 </td>
                 <td>
-                    -
+                    <%=Math%>
                 </td>
                 <td>
-                    -
+                    <%=English%>
                 </td>
                 <td>
-                    -
+                    <%=Composite%>
                 </td>
                 <td>
-                    -
+                    <%=All%>
                 </td>
                 <td>
-                    -
+                    <%=University%>
                 </td>
             </tr>
         </table>
