--- a/views/login.html
+++ b/views/login.html
@@ -1,53 +1,92 @@
-<!doctype html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>login</title>
-        <link rel="stylesheet" type="text/css" href="/stylesheets/login.css"/>
-    </head>
-    
-    <body>
-    	
-    	<div>
-            <div class="bgDiv">
-                <div class="login">
-                    <form action="/login" method="POST" id="loginForm">
-                    <div class="username">
-                        <input name='usr' class="userInp" type="text" placeholder="请输入用户名"/>
-                    </div>
-                    <div class="pwd">
-                        <input class="pwdInp" name='pwds' type="password" placeholder="请输入密码"/>
-                    </div>
-                    <div class="forgetPwd">
-                        <a class="forgetLink" href="http://localhost:3000/register">注册</a>
-                    </div>
-                    <button class="btn" type="submit">登录</button>
-                    </form>
-                </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>登录</title>
+    <style>
+        body{
+            /* 设置背景渐变 */
+            background-image: linear-gradient(to left,
+            #9c88ff,#3cadeb);
+            display: flex;
+            justify-content: center;
+        }
+        .a{
+            position:relative;
+            top: 100px;
+            width: 1100px;
+            height: 550px;
+            box-shadow: 0 5px 15px rgba(0,0,0,.8);
+            display: flex;
+        }
+        .b{
+            width: 800px;
+            height: 550px;
+            background-image: url("/images/201515-158211451517f1.jpg");
+            /* 让图片适应大小 */
+            background-size: cover;
+        }
+        .c{
+            width: 300px;
+            height: 550px;
+            background-color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .d{
+            width: 250px;
+            height: 500px;
+        }
+        .d h1{
+            font: 900 30px '';
+        }
+        .e{
+            width: 230px;
+            margin: 20px 0;
+            outline: none;
+            border: 0;
+            padding: 10px;
+            border-bottom: 3px solid rgb(80,80,170);
+            font: 900 16px '';
+        }
+        .f{
+            float: right;
+            margin: 10px 0;
+        }
+        .g{
+            position: absolute;
+            margin: 20px;
+            bottom: 40px;
+            display: block;
+            width: 200px;
+            height: 60px;
+            font: 900 30px '';
+            text-decoration: none;
+            line-height: 50px;
+            border-radius: 30px;
+            background-image: linear-gradient(to left,
+            #9c88ff,#3cadeb);
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
+    <div class="a">
+        <div class="b"></div>
+        <div class="c">
+            <form action="/login" method="POST">
+            <div class="d">
+                <h1>Login/Register</h1>
+                <input type="text" class="e" placeholder="USER NAME" name="usr">
+                <input type="password" class="e" placeholder="PASSWORD" name="pwds">
+                <a href="/register" class="f">没有账号? -->去注册</a>
+                <button type="submit" width="0px"><a class="g">Login</a></button>
             </div>
+        </form>
         </div>
-        <script src="/javascripts/jquery-3.6.0.js"></script>
-        <script>
-            // function seroalizeToJson(form){
-            //         var result ={};
-            //         var f = form.serializeArray();
-            //         f.forEach(function (item){
-            //             result[item.name]=item.value
-            //         })
-            //         return result
-            // };
-        //    $('#loginForm').on('submit',function(){
-            // var result = seroalizeToJson($(this));
-            // if(result.usr.length == 0){
-                // alert('请输入用户名');
-                // return false;
-            // }
-            // if(result.pwds.length==0){
-                // alert('请输入密码');
-                // return false;
-            // }
-            // return false
-        //    })
-        </script>
-    </body>
+    </div>
+</body>
 </html>
