--- a/views/index.html
+++ b/views/index.html
@@ -65,7 +65,7 @@ https://wordpress.org/plugins/coming2live/
 						<div class="hero__wrapper">
 							<div class="row">
 								<div class="col-lg-10 col-xs-offset-0 col-sm-offset-0 col-md-offset-0 col-lg-offset-1 ">
-									<div class="hero__title_inner"><span class="hero__icon">K</span>
+									<div class="hero__title_inner"><span class="hero__icon">Login</span>
 										<h1 class="hero__title">距离高考仅剩</h1>
 										<p class="hero__text">拼尽全力，蓄势待发吧！</p>
 									</div>
