--- a/views/index.html
+++ b/views/index.html
@@ -35,7 +35,7 @@ https://wordpress.org/plugins/coming2live/
 					
 					<!-- header -->
 					<div class="header">
-						<div class="header__left"><span>市二模成绩查询</span><span>预测录取大学查询</span><span>一切都皆括其中</span><span><a href="/login">登陆/注册以获取详情</span>
+						<div class="header__left"><span>考试成绩查询</span><span>预测录取大学查询</span><span>一切都皆括其中</span><span><a href="/login">登陆/注册以获取详情</span>
 						</div>
 						<div class="header__social">
 							
@@ -65,7 +65,7 @@ https://wordpress.org/plugins/coming2live/
 						<div class="hero__wrapper">
 							<div class="row">
 								<div class="col-lg-10 col-xs-offset-0 col-sm-offset-0 col-md-offset-0 col-lg-offset-1 ">
-									<div class="hero__title_inner"><span class="hero__icon">Login</span>
+									<div class="hero__title_inner"><span class="hero__icon">K</span>
 										<h1 class="hero__title">距离高考仅剩</h1>
 										<p class="hero__text">拼尽全力，蓄势待发吧！</p>
 									</div>
