--- a/views/change.html
+++ b/views/change.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form action="/change" method="POST">
-        <input type="text" placeholder='请输入姓名' name="change_name">
+        <input type="text" placeholder='请输入新姓名' name="change_name">
         <input type="text" placeholder="请输入学校" name="change_school">
         <input type="text" placeholder="请输入班级" name="change_class">
         <button type="submit">提交</button>
