--- a/views/add.html
+++ b/views/add.html
@@ -17,6 +17,7 @@
                     <th style="width:40%;">Name</th>
                     <th style="width:25%">school</th>
                     <th class="d-none d-md-table-cell" style="width:25%">class</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
@@ -49,10 +50,11 @@
                         </option>
                         </datalist>
                     </td>
+                    <td>
+                        <button class="save">保存</button></td>
                 </tr>
             </tbody>
             </table>
-        <button class="save">保存</button>
     </form>
 </body>
 </html>
