--- a/views/change.html
+++ b/views/change.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>修改详情</title>
+	<link href="/stylesheets/app.css" rel="stylesheet">
 </head>
 <body>
+    <h1>修改信息</h1>
     <form action="/change" method="POST">
-        <input type="text" placeholder='请输入新姓名' name="change_name">
-        <input type="text" placeholder="请输入学校" name="change_school">
-        <input type="text" placeholder="请输入班级" name="change_class">
+        <input type="text" placeholder='<%=old_info[0].sname%>' name="change_name">
+        <input type="text" placeholder="<%=old_info[0].school%>" name="change_school">
+        <input type="text" placeholder="<%=old_info[0].class%>" name="change_class">
         <button type="submit">提交</button>
     </form>
 </body>
