--- a/views/score.html
+++ b/views/score.html
@@ -35,40 +35,40 @@
             </a>
 					</li>
 
-					<li class="sidebar-item">
+					<!-- <li class="sidebar-item">
 						<a class="sidebar-link" href="pages-profile.html">
               <i class="align-middle" data-feather="user"></i> <span class="align-middle">Profile</span>
             </a>
-					</li>
+					</li> -->
 
-					<li class="sidebar-item">
+					<!-- <li class="sidebar-item">
 						<a class="sidebar-link" href="pages-settings.html">
               <i class="align-middle" data-feather="settings"></i> <span class="align-middle">Settings</span>
             </a>
-					</li>
+					</li> -->
 
-					<li class="sidebar-item">
+					<!-- <li class="sidebar-item">
 						<a class="sidebar-link" href="pages-invoice.html">
               <i class="align-middle" data-feather="credit-card"></i> <span class="align-middle">Invoice</span>
             </a>
-					</li>
+					</li> -->
 
-					<li class="sidebar-item">
+					<!-- <li class="sidebar-item">
 						<a class="sidebar-link" href="pages-blank.html">
               <i class="align-middle" data-feather="book"></i> <span class="align-middle">Blank</span>
             </a>
-					</li>
+					</li> -->
 
 					<li class="sidebar-header">
 						Tools & Components
 					</li>
 					<li class="sidebar-item">
 						<a data-target="#ui" data-toggle="collapse" class="sidebar-link collapsed">
-              <i class="align-middle" data-feather="briefcase"></i> <span class="align-middle">UI Elements</span>
+              <i class="align-middle" data-feather="briefcase"></i> <span class="align-middle">表格</span>
             </a>
 						<ul id="ui" class="sidebar-dropdown list-unstyled collapse " data-parent="#sidebar">
-							<li class="sidebar-item"><a class="sidebar-link" href="/tables">Alerts</a></li>
-							<li class="sidebar-item"><a class="sidebar-link" href="/score">Buttons</a></li>
+							<li class="sidebar-item"><a class="sidebar-link" href="/tables">学生信息</a></li>
+							<li class="sidebar-item"><a class="sidebar-link" href="/score">学生分数</a></li>
 							<li class="sidebar-item"><a class="sidebar-link" href="ui-cards.html">Cards</a></li>
 							<li class="sidebar-item"><a class="sidebar-link" href="ui-general.html">General</a></li>
 							<li class="sidebar-item"><a class="sidebar-link" href="ui-grid.html">Grid</a></li>
@@ -77,13 +77,13 @@
 						</ul>
 					</li>
 
-					<li class="sidebar-item">
+					<!-- <li class="sidebar-item">
 						<a class="sidebar-link" href="icons-feather.html">
               <i class="align-middle" data-feather="coffee"></i> <span class="align-middle">Icons</span>
             </a>
-					</li>
+					</li> -->
 
-					<li class="sidebar-item">
+					<!-- <li class="sidebar-item">
 						<a data-target="#forms" data-toggle="collapse" class="sidebar-link collapsed">
               <i class="align-middle" data-feather="check-circle"></i> <span class="align-middle">Forms</span>
             </a>
@@ -91,7 +91,7 @@
 							<li class="sidebar-item"><a class="sidebar-link" href="forms-layouts.html">Form Layouts</a></li>
 							<li class="sidebar-item"><a class="sidebar-link" href="forms-basic-inputs.html">Basic Inputs</a></li>
 						</ul>
-					</li>
+					</li> -->
 
 					<li class="sidebar-item active">
 						<a class="sidebar-link" href="/tables">
